# anime-organizer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  generate_aliases.py  tmp_fix.ps1
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: alias-request.md
.github/prompts/: pr-workflow.prompt.md
.github/workflows/: alias-update.yml  bangumi-db.yml  ci.yml  main-build.yml  nightly.yml  release.yml
assets/anifilebert/: config.json  vocab.json
data/: aliases.json
proto/: clouddrive.proto
scripts/: create_alias_issues.py  merge_aliases.py  qb_aniorg.ps1  update_aliases.py
src/: anifilebert.rs  cli.rs  commands.rs  daemon.rs  error.rs  lib.rs  library_index.rs  main.rs  mlip.rs  nfo.rs  organizer.rs  parser.rs  title_resolver.rs
src/daemon/: api.rs  cloud.rs  model.rs  queue.rs  rss_schedule.rs  web.rs  worker.rs
src/metadata/: alias.rs  bangumi.rs  mod.rs  tmdb.rs  wiki.rs
src/rss/: AGENTS.md  client.rs  db.rs  filter.rs  http_client.rs  mod.rs  parser.rs  processor.rs  proxy.rs  scheduler.rs  torrent.rs
src/scraper/: AGENTS.md  db_builder.rs  download.rs  matcher.rs  mod.rs  sources.rs  wiki_parser.rs
src/torrent/: dmhy.rs  dmhy_playwright.rs  mod.rs  nyaa.rs  nyaa_playwright.rs  types.rs
tests/: anifilebert_parser_compat_tests.rs  integration_test.rs  library_index_cli_tests.rs  library_index_tests.rs  parser_movie_tests.rs  parser_tests_ani_season.rs  parser_tests_ascii_1.rs  parser_tests_ascii_2.rs  parser_tests_ascii_3.rs  parser_tests_batch4.rs  parser_tests_batch5.rs  parser_tests_boxuexunchun.rs  parser_tests_dmhy.rs  parser_tests_feng.rs  parser_tests_kitauji.rs  parser_tests_kitauji_v3.rs  parser_tests_kkt.rs  parser_tests_lolitwo.rs  parser_tests_moflex.rs  parser_tests_new_batch6.rs  parser_tests_porter_raws.rs  parser_tests_subpht.rs  parser_tests_sweetsub_v3.rs  parser_tests_xiashi.rs  parser_tests_yitao.rs  parser_tests_yousei.rs  parser_tests_yousei2.rs  rss_integration_test.rs
tests/data/: final_test.txt
tests/fixtures/: dmhy-rss.xml  qbittorrent-job-request.json  scraped-anime.json
webui/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
webui/src/: App.vue  api.test.ts  api.ts  cloud.test.ts  cloud.ts  filters.ts  i18n.test.ts  i18n.ts  organize.test.ts  organize.ts  router.ts  rss-cloud.test.ts  styles.css
webui/src/stores/: status.test.ts  status.ts
webui/src/views/: AboutView.vue  AliasesView.vue  CloudView.vue  DashboardView.vue  JobDetailView.vue  JobsView.vue  OrganizeView.vue  RssDetailView.vue  RssView.vue  ScraperView.vue  TorrentView.vue
webui/tests/: rss-cloud.spec.ts
webui/tests/e2e/: webui.spec.ts
