[package]
name = "anime-organizer"
version = "1.0.0"
edition = "2021"
authors = ["ModerRAS"]
description = "轻量级、跨平台命令行工具，专为动漫收藏者批量整理视频文件，支持硬链接模式实现零额外空间占用"
license = "AGPL-3.0"
repository = "https://github.com/ModerRAS/anime-organizer"
readme = "README.md"
keywords = ["anime", "organizer", "cli", "media", "hardlink"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "aniorg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
thiserror = "1.0"
walkdir = "2.4"
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
rust-embed = "8"
tokio = { version = "1", features = ["full"], optional = true }
rusqlite = { version = "0.34", features = ["bundled"], optional = true }

[dev-dependencies]
tempfile = "3.9"
tokio = { version = "1", features = ["full"] }

[features]
default = ["metadata"]
metadata = ["dep:reqwest", "dep:tokio"]
scraper = ["metadata", "dep:rusqlite"]

[profile.release]
lto = true
codegen-units = 1
strip = true
