[package]
name = "anime-organizer"
version = "1.0.0"
edition = "2021"
authors = ["ModerRAS"]
description = "轻量级、跨平台命令行工具，专为动漫收藏者批量整理视频文件，支持硬链接模式实现零额外空间占用"
license = "AGPL-3.0"
repository = "https://github.com/ModerRAS/anime-organizer"
readme = "README.md"
keywords = ["anime", "organizer", "cli", "media", "hardlink"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "aniorg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
thiserror = "1.0"
walkdir = "2.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "system-proxy"], optional = true }
axum = { version = "0.7.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
tokio = { version = "1", features = ["full"], optional = true }
rusqlite = { version = "0.34", features = ["bundled"] }
flate2 = { version = "1.1", optional = true }
ndarray = { version = "0.17", optional = true }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native", "api-24"], optional = true }
zip = { version = "2", optional = true }
tempfile = { version = "3.9", optional = true }
urlencoding = { version = "2", optional = true }
tracing = "0.1"
tonic = { version = "0.12", features = ["tls", "tls-roots"], optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
sha1 = { version = "0.10", optional = true }
bt_bencode = { version = "0.8", optional = true }
async-trait = { version = "0.1", optional = true }
tower = { version = "0.5", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }
url = { version = "2", optional = true }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v5"] }
zhhz = { version = "0.7.7", optional = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.9"
tokio = { version = "1", features = ["full"] }

[features]
default = ["metadata", "daemon"]
daemon = ["dep:axum", "dep:tokio", "dep:url"]
anifilebert = ["dep:flate2", "dep:ndarray", "dep:ort"]
anifilebert-directml = ["anifilebert", "ort/directml"]
anifilebert-amd-npu = ["anifilebert-directml"]
metadata = ["dep:reqwest", "dep:tokio", "dep:zip", "dep:zhhz"]
scraper = ["metadata", "dep:zip", "dep:tempfile"]
torrent-scraper = ["dep:tokio", "dep:reqwest", "dep:urlencoding"]
llm-api = []
clouddrive = ["dep:tonic", "dep:prost", "dep:prost-types", "dep:sha1", "dep:bt_bencode", "dep:tower", "dep:tracing-subscriber", "dep:url", "dep:reqwest", "dep:tokio", "dep:tokio-stream", "dep:async-trait"]
scraper-clouddrive = ["scraper", "clouddrive"]

[profile.release]
lto = true
codegen-units = 1
strip = true
